# clicanvas

./: .hist  README.md  main.py  push.sh  pyproject.toml  requirements.txt
image/: __init__.py  pixel.py
input/: base.py  confirm.py  constrained.py  getpass.py  readline.py
microwidgets/: _lib.py  checkbox.py  incrementer.py  menu.py
src/clicanvas/: __init__.py
src/clicanvas/input/: __init__.py  base.py  constrained.py  getpass.py  readline.py
src/clicanvas/microwidgets/: __init__.py  checkbox.py  menu.py  radio.py  slider.py
src/input/: base.py  confirm.py
src/microwidgets/: __init__.py
