[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clicanvas"
version = "0.1.7.4"
description = "A python library that deals with terminal-based user input. From a TUI framework to custom input functions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "inputkit @ git+https://github.com/Minemario64/inputkit.git",
    "regex>=2026.2.28",
]

[project.optional-dependencies]
thonny = []

[tool.uv.sources]
tester = { git = "https://github.com/Minemario64/Testing-Suite.git" }
inputkit = { git = "https://github.com/Minemario64/inputkit.git" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = []
